--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -18,7 +18,7 @@
         "id": "K28AUog3BKoM"
       },
       "source": [
-        "# <span style='color :blue' > Let's prepare the environment </span>\n"
+        "# <span style='color :#40be46' > Let's prepare the environment </span>\n"
       ]
     },
     {
@@ -84,9 +84,9 @@
       "outputs": [],
       "source": [
         "# Replace the <IDENTITY-TOKEN> placeholder with the token you generated in the JFrog Platform SetMeUp.\n",
-        "%env HF_TOKEN=cmVmdGtuOjAxOjE3NTQxMjA4NzI6YjFWZEY1dUZGd3MyOVYwSks1aEptQ01VM2lm\n",
+        "%env HF_TOKEN=<IDENTITY-TOKEN>\n",
         "# Replace the <PATH> placeholder with the path to your ML Model Management repository in Artifactory, found in the JFrog Platform SetMeUp.\n",
-        "%env HF_ENDPOINT=https://productdemo.jfrog.io/artifactory/api/huggingfaceml/shira-demo-hf-remote\n",
+        "%env HF_ENDPOINT=<PATH>\n",
         "\n",
         "%env HF_HUB_ETAG_TIMEOUT=86400"
       ]
@@ -120,7 +120,7 @@
       "outputs": [],
       "source": [
         "# Replace <ARTIFACTORY_PIP_REPOSITORY_URL> with the URL pointing to your pip repository found in the the JFrog Platform Set-Me-Up.\n",
-        "!pip3 install huggingface_hub ultralytics -i https://shirabd:cmVmdGtuOjAxOjE3NTQxMjA5NDM6V2N2WXFWcjNCcVpyb2xtbXVlbnI5Z1ZodFh0@productdemo.jfrog.io/artifactory/api/pypi/shira-demo-pypi-remote/simple"
+        "!pip3 install huggingface_hub ultralytics -i <ARTIFACTORY_PIP_REPOSITORY_URL>"
       ]
     },
     {
@@ -537,10 +537,10 @@
       "outputs": [],
       "source": [
         "# Replace the <IDENTITY-TOKEN> placeholder with the token you generated in the JFrog Platform SetMeUp.\n",
-        "%env HF_TOKEN=cmVmdGtuOjAxOjE3NTQyOTgyMjA6Y2gwWXV4dUZmOVdEMlBvNVFLcWh0SjZuOWJm\n",
+        "%env HF_TOKEN=<IDENTITY-TOKEN>\n",
         "\n",
         "# Replace the <PATH> placeholder with the path to your ML Model Management repository in Artifactory, found in the JFrog Platform SetMeUp.\n",
-        "%env HF_ENDPOINT=https://productdemo.jfrog.io/artifactory/api/huggingfaceml/shira-hf-local\n",
+        "%env HF_ENDPOINT=<PATH>\n",
         "\n",
         "%env HF_HUB_DOWNLOAD_TIMEOUT=86400\n",
         "%env HF_HUB_ETAG_TIMEOUT=86400"
@@ -616,10 +616,9 @@
       "outputs": [],
       "source": [
         "# Replace <ARTIFACTORY_PIP_REPOSITORY_URL> with the URL pointing to your pip repository found in the the JFrog Platform Set-Me-Up.\n",
-        "!pip3 install qwak-sdk -i https://shirabd:cmVmdGtuOjAxOjE3NTQxMjA5NDM6V2N2WXFWcjNCcVpyb2xtbXVlbnI5Z1ZodFh0@productdemo.jfrog.io/artifactory/api/pypi/shira-demo-pypi-remote/simple\n",
-        "\n",
+        "!pip3 install qwak-sdk -i <ARTIFACTORY_PIP_REPOSITORY_URL>\n",
         "# Replace <QWAK_PERSONAL_API_KEY> with your Qwak personal key from the qwak platform.\n",
-        "!qwak configure --api-key \"73809e126a7bd7e787cc75de5bb13026@j0afnsVSU4lc)>#eqnDeh^7tw5)5h@Ww\"\n",
+        "!qwak configure --api-key <QWAK_PERSONAL_API_KEY>\n",
         "\n",
         "# Test successful connection\n",
         "!qwak projects list"
