--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -1,15 +1,24 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "EG-8q2j8BaPP"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "!unzip mlops.zip\n",
-        "!rm -rf sample_data"
+        "# <span style='color :#40be46' > JFrog Swampup 2024 MLOPs LAB - The Frog-Factor Authenticator </span>\n",
+        "🐸 Welcome to the Lab! 🐸\n",
+        "At JFrog, we're always exploring new features and capabilities. Today, we're diving into the authentication market with a brilliant idea: the \"Frog-Factor\" authenticator. This unique tool will authenticate you by recognizing your face alongside the JFrog frog in the same photo!\n",
+        "\n",
+        "Your mission, if you choose to accept it, is to help us build the Frog-Factor authenticator.\n",
+        "\n",
+        "First up, we'll need an object-detection model to get us started. Fortunately, we don't have to start from scratch! There are existing models we can use. But will they work out of the box? And remember, we must develop this authenticator securely and reliably.\n",
+        "\n",
+        "As you work through the notebook, follow the cells in order:\n",
+        "\n",
+        "✨ - This icon means there's a task for you to complete before moving to the next cell.\n",
+        "\n",
+        "👀 - This icon provides information about what the next cell is doing.\n",
+        "\n",
+        "Let's get started! We're here to help you every step of the way."
       ]
     },
     {
@@ -29,11 +38,13 @@
       "source": [
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
+        "Since we want to work in a secure and trusted way, we will use Artifactory to store both the model as well as all the python dependencies that will be used during the process. \n",
+        "\n",
         "Please perform the following steps:\n",
         "1. Navigate to *Administration --> Repositories*.\n",
         "2. Create a remote HuggingFaceML repository in your Artifactory project. This repository will be used to cache the models HuggingFace.\n",
         "3. Create a remote Python repository in your Artifactory project. This repository will be used to cache the python packages that are used in the code.\n",
-        "4. Run the following code to test the connectivity to Artifactory:"
+        "4. Run the next cell to test the connectivity to Artifactory and prepare the env for the notebook"
       ]
     },
     {
@@ -45,6 +56,8 @@
       },
       "outputs": [],
       "source": [
+        "!unzip mlops.zip\n",
+        "!rm -rf sample_data\n",
         "# TBD test connetivity to Artifactory"
       ]
     },
@@ -64,6 +77,9 @@
       },
       "source": [
         "## Configure HuggingFace client to work through Artifactory\n",
+        "\n",
+        "We don't have to start from scratch! Luckily HuggingFace contains some great object detection models we can try out. \n",
+        "Since we want to store the models in Artifactory, we'll need to configure the environment as follows.\n",
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
@@ -98,6 +114,9 @@
       },
       "source": [
         "## Download the required Python packages through Artifactory\n",
+        "\n",
+        "To use and test our model, we'll need some python packages. Since we want to make sure we're using trusted and allowed packages, we'll get the packages also from Artifactory.\n",
+        "We'll configure the python installations to go to Artifactory to fetch the packages. \n",
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
@@ -163,7 +182,9 @@
         "id": "5x1XYVieBKoZ"
       },
       "source": [
-        "## Download the pre-trained model"
+        "## Download the pre-trained model\n",
+        "\n",
+        "👀 We'll be using the Yolov8 object detection pre-trained model. It's initially configured only to detect human faces."
       ]
     },
     {
@@ -204,7 +225,8 @@
         "Please open your Artifactory instance and navigate to your newly created *remote HuggingfaceML repository*\n",
         "1. Navigate to *Application --> Artifactory --> Artifacts\"\n",
         "2. Find your newly created HuggingFaceML remote repository.\n",
-        "3. Expand the repository and verify the YOLOV8 model is cached inside the repository."
+        "3. Expand the repository and verify the YOLOV8 model is cached inside the repository.\n",
+        "4. Navigate to the equivalent remote cache repository, and expand the model until you see the lead file - it will be a file named '.jfrog_huggingface_model_info.json' . Check the different tabs. "
       ]
     },
     {
@@ -215,7 +237,11 @@
       "source": [
         "## Helper Functions\n",
         "\n",
-        "👀 The following cell defines some helper functions"
+        "👀 The following cell defines some helper functions that will help us to test and develop the models.\n",
+        "\n",
+        "✨ <span style='color : #fae253' > TASK </span> ✨\n",
+        "\n",
+        "Replace <YOUR_NAME> with your name. "
       ]
     },
     {
@@ -226,7 +252,7 @@
       },
       "outputs": [],
       "source": [
-        "name = \"Shira\"\n",
+        "name = \"<YOUR_NAME\"\n",
         "\n",
         "def take_photo(filename='photo.jpg', quality=0.8):\n",
         "  js = Javascript('''\n",
@@ -277,7 +303,7 @@
       "source": [
         "# Inference function\n",
         "\n",
-        "👀 The following cell defines the inference function. The model is configured to identify people."
+        "👀 The following cell defines the inference function. The \"predict\" function will get an image as input, and try to detect human face in the image. "
       ]
     },
     {
@@ -337,6 +363,15 @@
         "\n",
         "    cv2_imshow(frame)\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Let's go ahead and test the model! \n",
+        "Please approve using the camera for the model to work.\n",
+        "Once you have the video stream, click \"Capture\" to take a photo, and examine the model's output."
       ]
     },
     {
