--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -4,8 +4,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# <span style='color :#40be46' > JFrog Swampup 2024 MLOPs LAB - The Frog-Factor Authenticator </span>\n",
-        "🐸 Welcome to the Lab! 🐸\n",
+        "# 🐸 <span style='color :#40be46' > JFrog Swampup 2024 MLOPs LAB - The Frog-Factor Authenticator </span> 🐸 \n",
+        "\n",
+        "Welcome to the Lab! \n",
+        "\n",
+        "\n",
         "At JFrog, we're always exploring new features and capabilities. Today, we're diving into the authentication market with a brilliant idea: the \"Frog-Factor\" authenticator. This unique tool will authenticate you by recognizing your face alongside the JFrog frog in the same photo!\n",
         "\n",
         "Your mission, if you choose to accept it, is to help us build the Frog-Factor authenticator.\n",
@@ -44,7 +47,8 @@
         "1. Navigate to *Administration --> Repositories*.\n",
         "2. Create a remote HuggingFaceML repository in your Artifactory project. This repository will be used to cache the models HuggingFace.\n",
         "3. Create a remote Python repository in your Artifactory project. This repository will be used to cache the python packages that are used in the code.\n",
-        "4. Run the next cell to test the connectivity to Artifactory and prepare the env for the notebook"
+        "4. Upload the mlops.zip file into the notebook session.\n",
+        "5. Run the next cell to test the connectivity to Artifactory and prepare the env for the notebook"
       ]
     },
     {
@@ -67,7 +71,7 @@
         "id": "nkYprO9zBKoY"
       },
       "source": [
-        "# <span style='color :#40be46' > Lab1: Caching HuggingFace models in Artifactory </span>"
+        "# 🐸  <span style='color :#40be46' > Lab1: Caching HuggingFace models in Artifactory </span> 🐸 "
       ]
     },
     {
@@ -160,7 +164,7 @@
       },
       "outputs": [],
       "source": [
-        "from huggingface_hub import snapshot_download, HfApi\n",
+        "from huggingface_hub import snapshot_download, HfApi, logging\n",
         "from huggingface_hub.utils import HfHubHTTPError\n",
         "\n",
         "import json\n",
@@ -173,7 +177,9 @@
         "from google.colab.output import eval_js\n",
         "from base64 import b64decode\n",
         "\n",
-        "from google.colab.patches import cv2_imshow"
+        "from google.colab.patches import cv2_imshow\n",
+        "\n",
+        "import logging,shutil"
       ]
     },
     {
@@ -184,7 +190,11 @@
       "source": [
         "## Download the pre-trained model\n",
         "\n",
-        "👀 We'll be using the Yolov8 object detection pre-trained model. It's initially configured only to detect human faces."
+        "👀 We'll be using the Yolov8 object detection pre-trained model. It's initially configured only to detect human faces.\n",
+        "\n",
+        "✨ <span style='color : #fae253' > TASK </span> ✨\n",
+        "\n",
+        "Replace <YOUR_NAME> with your name. "
       ]
     },
     {
@@ -196,14 +206,13 @@
       },
       "outputs": [],
       "source": [
-        "import logging\n",
-        "\n",
-        "logging.getLogger(\"huggingface_hub\").setLevel(logging.ERROR)\n",
+        "logging.set_verbosity_error()\n",
         "\n",
         "# Load the model and processor\n",
         "model_name = \"shirabendor/YOLOV8-oiv7\"\n",
         "weights = \"yolov8m-oiv7.pt\"\n",
         "config_file = \"./model/main/config.json\"\n",
+        "name = <YOUR_NAME>\n",
         "\n",
         "try:\n",
         "    snapshot_download(repo_id=model_name, allow_patterns=weights, local_dir=\".\")\n",
@@ -237,11 +246,7 @@
       "source": [
         "## Helper Functions\n",
         "\n",
-        "👀 The following cell defines some helper functions that will help us to test and develop the models.\n",
-        "\n",
-        "✨ <span style='color : #fae253' > TASK </span> ✨\n",
-        "\n",
-        "Replace <YOUR_NAME> with your name. "
+        "👀 The following cell defines some helper functions that will help us to test and develop the models."
       ]
     },
     {
@@ -252,8 +257,6 @@
       },
       "outputs": [],
       "source": [
-        "name = \"<YOUR_NAME\"\n",
-        "\n",
         "def take_photo(filename='photo.jpg', quality=0.8):\n",
         "  js = Javascript('''\n",
         "    async function takePhoto(quality) {\n",
@@ -315,16 +318,12 @@
       },
       "outputs": [],
       "source": [
-        "import logging\n",
-        "\n",
-        "logging.getLogger(\"ultralytics\").setLevel(logging.ERROR)\n",
+        "logging.logging.getLogger(\"ultralytics\").setLevel(logging.ERROR) \n",
         "\n",
         "model = YOLO(weights)\n",
         "\n",
-        "label_color_map = {}\n",
-        "\n",
-        "def infere():\n",
-        "\n",
+        "def infere(cheat=False, name=name):\n",
+        "    \n",
         "    with open(config_file, 'r') as f:\n",
         "        config = json.load(f)\n",
         "\n",
@@ -333,13 +332,21 @@
         "    conf           = config['conf']\n",
         "    max_det        = config['max_det']\n",
         "\n",
-        "    filename = take_photo()\n",
-        "    frame = cv2.imread(filename)\n",
+        "    filename = 'photo.jpg'  # Default filename\n",
+        "    if not cheat:\n",
+        "        filename = take_photo()\n",
+        "    else:\n",
+        "      data = \"./model/main/tom.jpg\"\n",
+        "      name = \"Tom Hanks\"\n",
+        "      shutil.copy(data, filename)\n",
+        "           \n",
+        "\n",
+        "    frame = cv2.imread(filename) \n",
         "\n",
         "    frame_height, frame_width = frame.shape[:2]\n",
-        "    results = model.predict(source=frame,\n",
-        "                            show=False,\n",
-        "                            classes=classes,\n",
+        "    results = model.predict(source=frame, \n",
+        "                            show=False, \n",
+        "                            classes=classes, \n",
         "                            conf=conf,\n",
         "                            max_det=max_det)\n",
         "\n",
@@ -350,16 +357,14 @@
         "    for box in boxes:\n",
         "        label = model.names[int(box.cls)]\n",
         "        x1, y1, x2, y2 = map(int, box.xyxy[0])  # Convert to integer coordinates\n",
-        "        if label not in label_color_map:\n",
-        "            label_color_map[label] = (random.randint(0, 255), random.randint(0, 255), random.randint(0, 255))\n",
-        "        # Draw bounding box around detected person\n",
-        "        cv2.rectangle(frame, (x1, y1), (x2, y2), label_color_map[label], 3)  # Colored box\n",
-        "\n",
+        "  \n",
         "        if int(box.cls) in target_classes:\n",
-        "          # Overlay the frog image\n",
-        "          cv2.putText(frame, \"Frog\", (x1, y1 - 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5, label_color_map[label], 2)\n",
+        "          # Draw bounding box around detected object\n",
+        "          cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 0, 255), 3)  # Colored box \n",
+        "          cv2.putText(frame, \"Frog\", (x1, y1 - 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0,0,255), 2)\n",
         "        else:\n",
-        "          cv2.putText(frame, name, (x1, y1 - 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5, label_color_map[label], 2)\n",
+        "          cv2.rectangle(frame, (x1, y1), (x2, y2), (255, 0, 0), 3)  # Colored box \n",
+        "          cv2.putText(frame, name, (x1, y1 - 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5,  (255, 0, 0), 2)\n",
         "\n",
         "    cv2_imshow(frame)\n",
         "\n"
@@ -392,11 +397,31 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "In case you can't or don't want to use your own picture, you can use the cheat sheet cell below:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "try:\n",
+        "    infere(cheat=True)\n",
+        "except Exception as e:\n",
+        "    cv2.destroyAllWindows()\n",
+        "    raise e"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "_qlAqOYHBKoa"
       },
       "source": [
-        "# <span style='color :#40be46' > Lab2: Securing models </span>"
+        "# 🐸  <span style='color :#40be46' > Lab2: Securing models </span> 🐸 "
       ]
     },
     {
@@ -407,6 +432,12 @@
       "source": [
         "## Block malicious model with Xray\n",
         "\n",
+        "Our Yolo model did quite well identifying human faces, but we wanted it to also detect frogs.\n",
+        "What can we do?\n",
+        "Searching HuggingFace, there is a model that seems just right! \n",
+        "\n",
+        "But is it safe? Let's configure Xray for our HuggingFace repository and find out. \n",
+        "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
         "Let's configure XRay to scan our HuggingFaceML remote repository.\n",
@@ -415,22 +446,26 @@
         "\n",
         "***Add the HuggingFaceML remote repository to XRay index:***\n",
         "\n",
-        "1. Navigate to *Administration --> Xray Settings --> Indexed Resources and click on `+ Add a Reposotiry`\n",
+        "1. Navigate to *Administration --> Xray Settings --> Indexed Resources* and click on `+ Add a Reposotiry`\n",
         "2. Search for your repository name on the right hand side search box, and drag it to the left hand side table. Click `Save`\n",
-        "\n",
-        "***Create a watch***\n",
-        "\n",
-        "1. Navigate to *Application --> Xray --> Watches & Policies\", click on the \"Watches\" tab and click on `+ New Watch`.\n",
-        "2. In the form, give your watch a name of your choice.\n",
-        "3. Click on `Add Repositories`. In the form that opens, select your repository on the right hand side and drag it to the left hand side. Click `Save`.\n",
+        "3. Search for your repository in the repositories list, and click on the ... menu. Click \"Index Now\" . No need to change anything in the dialog that opens. Refresh the status to see the results.\n",
         "\n",
         "***Create a policy***\n",
         "\n",
-        "1. Navigate to *Application --> Xray --> Watches & Policies\" and click on `+ New Policy`.\n",
+        "1. Navigate to *Application --> Xray --> Watches & Policies* and click on `+ New Policy`.\n",
         "2. In the form, give your policy a name of your choice and leave the \"Security\" policy ytype selected. Click on `Next`.\n",
         "3. In the next form, on the right hand side fom, give your rule a name of your choice and in the Rule Type dropdown select \"Malicious Packages\" . On the left hand side select the \"Block download\" action. Click `Save Rule`.\n",
-        "4. Back on the policy wizard, click `Next` and select your created watch from the previous step.\n",
-        "5. Click `Save Policy`.\n",
+        "4. Click `Save Policy`.\n",
+        "\n",
+        "***Create a watch***\n",
+        "\n",
+        "1. Navigate to *Application --> Xray --> Watches & Policies*, click on the \"Watches\" tab and click on `+ New Watch`.\n",
+        "2. In the form, give your watch a name of your choice.\n",
+        "3. Click on `Add Repositories`. In the form that opens, select your repository on the right hand side and drag it to the left hand side. Click `Save`.\n",
+        "4. Click on `Manage Policies` , search for your newly created policy, select it and drag it to the left hand side table. \n",
+        "5. Click another `Save` on the watch general page. \n",
+        "\n",
+        "\n",
         "\n"
       ]
     },
@@ -455,7 +490,7 @@
         "id": "FJPjVasqBKoa"
       },
       "source": [
-        "# <span style='color :#40be46' > Lab3: Uploading updated model to a local repository and deploying with Qwak </span>"
+        "# 🐸  <span style='color :#40be46' > Lab3: Uploading updated model to a local repository and deploying with Qwak </span> 🐸 "
       ]
     },
     {
@@ -464,11 +499,12 @@
         "id": "USGKsStrBKob"
       },
       "source": [
-        "## Train the model to identify airplanes\n",
+        "## Train the model to identify Frogs\n",
         "\n",
-        "👀 Until now, our model detected only people. Now, we will 'train' it to identify other objects, specifically airplanes.\n",
+        "Unfortunately, the \"best_model_for_identifying_frogs\" was not safe and we cannot use it.\n",
+        "But we still want to detect the frogs. Next, we will 'train' our original Yolo model to identify other objects, specifically frogs.\n",
         "\n",
-        "Due to time constraints, our training function does not actually train on additional images. Instead, we'll just change the model configuration. Check the \"config.json\" file before and after the training to see the difference.\n"
+        "👀  Due to time constraints, our training function does not actually train on additional images. Instead, we'll just change the model configuration. Check the \"config.json\" file before and after the training to see the difference.\n"
       ]
     },
     {
@@ -523,7 +559,10 @@
         "id": "osJKMUJXBKob"
       },
       "source": [
-        "## Run inference again"
+        "## Run inference again\n",
+        "\n",
+        "Let's check if the training did the trick!\n",
+        "Please take the JFrog frog and take a photo of the two of you together 😊 🐸 "
       ]
     },
     {
@@ -544,13 +583,33 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Again, Cheat sheet cell is available if you like below"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "try:\n",
+        "    infere(cheat=True)\n",
+        "except Exception as e:\n",
+        "    cv2.destroyAllWindows()\n",
+        "    raise e\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "j54q37oHBKob"
       },
       "source": [
         "## Upload to HF local\n",
         "\n",
-        "👀 Now that we have a new, trained model, we need to upload it to Artifactory HugginigFaceML local repository.\n",
+        "Now that we have a new, trained model, we need to upload it to Artifactory HugginigFaceML local repository in order to share it with other teams and promote it towards Production.\n",
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
@@ -629,6 +688,9 @@
       },
       "source": [
         "## Deploy with Qwak\n",
+        "\n",
+        "Now that we have a good model version, let's deploy it to a production endpoint with Qwak and moitor its performance.\n",
+        "Qwak A fully managed end-to-end platform that contains the infrastructure AI practitioners need to build, deploy, manage and monitor GenAI, LLMs and classic ML in production.\n",
         "\n",
         "We'll start by installing the qwak SDK.\n",
         "\n",
