--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -44,25 +44,11 @@
         "Since we want to work in a secure and trusted way, we will use Artifactory to store both the model as well as all the python dependencies that will be used during the process. \n",
         "\n",
         "Please perform the following steps:\n",
-        "1. Navigate to *Administration --> Repositories*.\n",
-        "2. Create a remote HuggingFaceML repository in your Artifactory project. This repository will be used to cache the models HuggingFace.\n",
-        "3. Create a remote Python repository in your Artifactory project. This repository will be used to cache the python packages that are used in the code.\n",
-        "4. Upload the mlops.zip file into the notebook session.\n",
-        "5. Run the next cell to test the connectivity to Artifactory and prepare the env for the notebook"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "hg7Wb0wIBKoY",
-        "metadata": {}
-      },
-      "outputs": [],
-      "source": [
-        "!unzip mlops.zip\n",
-        "!rm -rf sample_data\n",
-        "# TBD test connetivity to Artifactory"
+        "1. Log in to the training Artifactory here: https://jftrain17224572670.jfrog.io/\n",
+        "2. From the projects dropdown list, select your project (\"mlops-userx\")\n",
+        "3. Navigate to *Administration --> Repositories*.\n",
+        "4. Click on 'Create a Repository' and select *Remote*. Select *HuggingFaceML* .\n",
+        "5. In the next page, only provide the *Repository Key* (the repo name)  **The repository will be prefixed with your project name (\"mlops-userx\"). Please add the repository key \"hf-remote\"**  then click `Create Remote Repository`"
       ]
     },
     {
@@ -88,10 +74,10 @@
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
         "Please open your Artifactory instance and navigate to your newly created *remote HuggingFaceML* repository and click on \"Set Me Up\" in the top bar on the right.\n",
-        "1. Copy the *token* and paste it in the cell below, replacing the <IDENTITY_TOKEN> placeholder\n",
-        "2. Copy the *HF_ENDPOINT __value__* and paste it in the cell below, replacing the <PATH> placeholder\n",
+        "1. Copy the *token* and paste it in the cell below, replacing the <IDENTITY_TOKEN> placeholder \n",
+        "2. Replace x (in *userx-hf-remote* inside the HF_ENDPOINT env var) with your lab studentId number\n",
         "\n",
-        " 👀 The next cell sets the environment variables such that the huggingface client which we'll use later will not fetch the model from the hugging_face hub, but rather from Artifactory."
+        "👀 The next cell sets the environment variables such that the huggingface client which we'll use later will not fetch the model from the hugging_face hub, but rather from Artifactory."
       ]
     },
     {
@@ -105,8 +91,9 @@
       "source": [
         "# Replace the <IDENTITY-TOKEN> placeholder with the token you generated in the JFrog Platform SetMeUp.\n",
         "%env HF_TOKEN=<IDENTITY-TOKEN>\n",
-        "# Replace the <PATH> placeholder with the path to your ML Model Management repository in Artifactory, found in the JFrog Platform SetMeUp.\n",
-        "%env HF_ENDPOINT=<PATH>\n",
+        "\n",
+        "# Replace x (in userx-hf-remote) with your userid number\n",
+        "%env HF_ENDPOINT=https://jftrain17224572670.jfrog.io/artifactory/mlops-userx-hf-remote/\n",
         "\n",
         "%env HF_HUB_ETAG_TIMEOUT=86400"
       ]
@@ -122,15 +109,22 @@
         "To use and test our model, we'll need some python packages. Since we want to make sure we're using trusted and allowed packages, we'll get the packages also from Artifactory.\n",
         "We'll configure the python installations to go to Artifactory to fetch the packages. \n",
         "\n",
+        "We've already configured a pypi repository for you to use. Run the next cell to download the required dependencies. \n",
+        "\n",
+        "*NOTE:*\n",
+        "The following cell may take up to 3 minutes to complete. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
-        "Please open your Artifactory instance and navigate to your newly created *remote PyPi repository* :\n",
-        "1. Navigate to *Application --> Artifactory --> Artifacts* and search for your repository.\n",
-        "2. Click on \"Set Me Up\" and the top bar on the right.\n",
-        "1. Navigate to the \"Install\" tab.\n",
-        "2. Copy the index-url value and paste it in the cell below, replacing the <ARTIFACTORY_PIP_REPOSITORY_URL> placeholder\n",
-        "\n",
-        "👀 The next cell downloads and installs the required python pacages while caching it in Artifactory."
+        "Please open your Artifactory instance to our pypi repository: https://jftrain17224572670.jfrog.io/ui/repos/tree/General/mlops-training-remote-pypi \n",
+        "1. Click on `Set Me Up` in the top bar, and click on `Install` tab.\n",
+        "2. Copy the URL from the value of index-url (should look something like https://pstrainenv:<PASSWORD>@jftrain17224572670.jfrog.io/artifactory/api/pypi/mlops-training-remote-pypi/simple)\n",
+        "3. Replace <ARTIFACTORY_PIP_REPOSITORY_URL> with the URL you copied ."
       ]
     },
     {
@@ -215,10 +209,13 @@
         "name = <YOUR_NAME>\n",
         "\n",
         "try:\n",
-        "    snapshot_download(repo_id=model_name, allow_patterns=weights, local_dir=\".\")\n",
+        "    snapshot_download(repo_id=model_name, allow_patterns=[weights, \"mlops.zip\"], local_dir=\".\")\n",
         "except HfHubHTTPError as e:\n",
-        "    print(\"\\n\\n\\U0001F6A8\\U0001F6A8\\U0001F6A8\\U0001F6A8 Xray blocked model download due to violation of the 'Block-Unknown' license policy.\\U0001F6A8\\U0001F6A8\\U0001F6A8\\U0001F6A8\\n\\n\")\n",
-        "\n"
+        "    print(\"\\n\\n\\U0001F6A8\\U0001F6A8\\U0001F6A8\\U0001F6A8 Xray blocked model download due to violation of the `Block Malicious Packages` policy.\\U0001F6A8\\U0001F6A8\\U0001F6A8\\U0001F6A8\\n\\n\")\n",
+        "\n",
+        "# unpack the other course materials and remove the default folder by colab\n",
+        "!unzip mlops.zip\n",
+        "!rm -rf sample_data"
       ]
     },
     {
@@ -232,10 +229,12 @@
         "Let's check Artifactory to review the outcome.\n",
         "\n",
         "Please open your Artifactory instance and navigate to your newly created *remote HuggingfaceML repository*\n",
-        "1. Navigate to *Application --> Artifactory --> Artifacts\"\n",
-        "2. Find your newly created HuggingFaceML remote repository.\n",
-        "3. Expand the repository and verify the YOLOV8 model is cached inside the repository.\n",
-        "4. Navigate to the equivalent remote cache repository, and expand the model until you see the lead file - it will be a file named '.jfrog_huggingface_model_info.json' . Check the different tabs. "
+        "\n",
+        "Here is a direct link (replace x with your studentID):  https://jftrain17224572670.jfrog.io/artifactory/mlops-userx-hf-remote/\n",
+        "\n",
+        "Expect to see something similar to the following:\n",
+        "\n",
+        "![image.png](./model/main/img/repo.png)"
       ]
     },
     {
@@ -336,7 +335,7 @@
         "    if not cheat:\n",
         "        filename = take_photo()\n",
         "    else:\n",
-        "      data = \"./model/main/tom.jpg\"\n",
+        "      data = \"./model/main/img/tom.jpg\"\n",
         "      name = \"Tom Hanks\"\n",
         "      shutil.copy(data, filename)\n",
         "           \n",
@@ -376,7 +375,8 @@
       "source": [
         "Let's go ahead and test the model! \n",
         "Please approve using the camera for the model to work.\n",
-        "Once you have the video stream, click \"Capture\" to take a photo, and examine the model's output."
+        "Once you have the video stream, click \"Capture\" to take a photo, and examine the model's output.\n",
+        "Then, run the cell again and take a photo of yourself and the Jfrog frog. Did the model identify the frog?"
       ]
     },
     {
@@ -417,6 +417,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "_qlAqOYHBKoa"
       },
@@ -440,7 +447,7 @@
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
-        "Let's configure XRay to scan our HuggingFaceML remote repository.\n",
+        "Let's configure Xray to scan our HuggingFaceML remote repository.\n",
         "\n",
         "#### Complete the following steps:\n",
         "\n",
@@ -450,23 +457,18 @@
         "2. Search for your repository name on the right hand side search box, and drag it to the left hand side table. Click `Save`\n",
         "3. Search for your repository in the repositories list, and click on the ... menu. Click \"Index Now\" . No need to change anything in the dialog that opens. Refresh the status to see the results.\n",
         "\n",
-        "***Create a policy***\n",
+        "For your convenience, we've already created a policy and a watch, so just adding your repository will be enough to kick off scanning. \n",
+        "You can examine them in the following links:\n",
         "\n",
-        "1. Navigate to *Application --> Xray --> Watches & Policies* and click on `+ New Policy`.\n",
-        "2. In the form, give your policy a name of your choice and leave the \"Security\" policy ytype selected. Click on `Next`.\n",
-        "3. In the next form, on the right hand side fom, give your rule a name of your choice and in the Rule Type dropdown select \"Malicious Packages\" . On the left hand side select the \"Block download\" action. Click `Save Rule`.\n",
-        "4. Click `Save Policy`.\n",
-        "\n",
-        "***Create a watch***\n",
-        "\n",
-        "1. Navigate to *Application --> Xray --> Watches & Policies*, click on the \"Watches\" tab and click on `+ New Watch`.\n",
-        "2. In the form, give your watch a name of your choice.\n",
-        "3. Click on `Add Repositories`. In the form that opens, select your repository on the right hand side and drag it to the left hand side. Click `Save`.\n",
-        "4. Click on `Manage Policies` , search for your newly created policy, select it and drag it to the left hand side table. \n",
-        "5. Click another `Save` on the watch general page. \n",
-        "\n",
-        "\n",
-        "\n"
+        "1. Policy: https://jftrain17224572670.jfrog.io/ui/admin/xray/policiesGovernance/policies/edit/block-malicious-models\n",
+        "2. Watch: https://jftrain17224572670.jfrog.io/ui/admin/xray/policiesGovernance/watches/edit/bloack-malicious-model-watch?activeTab=violations\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     },
     {
@@ -482,6 +484,19 @@
         "    snapshot_download(repo_id=\"MustEr/best_model_for_identifying_frogs\")\n",
         "except HfHubHTTPError as e:\n",
         "    print(\"\\n\\n\\U0001F6A8\\U0001F6A8\\U0001F6A8\\U0001F6A8 Xray blocked model download due to violation of the 'Malicious Package' policy.\\U0001F6A8\\U0001F6A8\\U0001F6A8\\U0001F6A8\\n\\n\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Check the scanning results \n",
+        "\n",
+        "✨ <span style='color : #fae253' > TASK </span> ✨\n",
+        "\n",
+        "Navigate to your project's scans list (**remembe to replace x with your student id**)\n",
+        "\n",
+        "https://jftrain17224572670.jfrog.io/ui/scans-list/repositories?projectKey=mlops-userx"
       ]
     },
     {
@@ -585,7 +600,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Again, Cheat sheet cell is available if you like below"
+        "Again, Cheat sheet cell is available if you like in the next cell."
       ]
     },
     {
