--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -74,7 +74,7 @@
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
         "Please open your Artifactory instance and navigate to your newly created *remote HuggingFaceML* repository and click on \"Set Me Up\" in the top bar on the right.\n",
-        "1. Copy the *token* and paste it in the cell below, replacing the <IDENTITY_TOKEN> placeholder \n",
+        "1. Copy the *token* and paste it in the cell below, replacing the \\<IDENTITY_TOKEN> placeholder \n",
         "2. Replace x (in *userx-hf-remote* inside the HF_ENDPOINT env var) with your lab studentId number\n",
         "\n",
         "👀 The next cell sets the environment variables such that the huggingface client which we'll use later will not fetch the model from the hugging_face hub, but rather from Artifactory."
@@ -121,10 +121,14 @@
       "source": [
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
-        "Please open your Artifactory instance to our pypi repository: https://jftrain17224572670.jfrog.io/ui/repos/tree/General/mlops-training-remote-pypi \n",
-        "1. Click on `Set Me Up` in the top bar, and click on `Install` tab.\n",
-        "2. Copy the URL from the value of index-url (should look something like https://pstrainenv:<PASSWORD>@jftrain17224572670.jfrog.io/artifactory/api/pypi/mlops-training-remote-pypi/simple)\n",
-        "3. Replace <ARTIFACTORY_PIP_REPOSITORY_URL> with the URL you copied ."
+        "1. In Artifactory,go to our pypi repository: https://jftrain17224572670.jfrog.io/ui/repos/tree/General/mlops-training-remote-pypi \n",
+        "2. Click on `Set Me Up` in the top bar, and click on `Install` tab.\n",
+        "3. Copy the URL from the value of index-url (should look something like https://pstrainenv:<PASSWORD>@jftrain17224572670.jfrog.io/artifactory/api/pypi/mlops-training-remote-pypi/simple)\n",
+        "4. Replace \\<ARTIFACTORY_PIP_REPOSITORY_URL> with the URL you copied .\n",
+        "\n",
+        "\n",
+        "*NOTE:*\n",
+        "The following cell may take up to 3 minutes to complete. "
       ]
     },
     {
@@ -188,7 +192,14 @@
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
-        "Replace <YOUR_NAME> with your name. "
+        "Replace \\<YOUR_NAME> with your name. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<YOUR_NAME> with your name. "
       ]
     },
     {
@@ -206,7 +217,7 @@
         "model_name = \"shirabendor/YOLOV8-oiv7\"\n",
         "weights = \"yolov8m-oiv7.pt\"\n",
         "config_file = \"./model/main/config.json\"\n",
-        "name = <YOUR_NAME>\n",
+        "name = \"<YOUR_NAME>\"\n",
         "\n",
         "try:\n",
         "    snapshot_download(repo_id=model_name, allow_patterns=[weights, \"mlops.zip\"], local_dir=\".\")\n",
@@ -453,7 +464,7 @@
         "\n",
         "***Add the HuggingFaceML remote repository to XRay index:***\n",
         "\n",
-        "1. Navigate to *Administration --> Xray Settings --> Indexed Resources* and click on `+ Add a Reposotiry`\n",
+        "1. Navigate to *Administration --> Xray Settings --> Indexed Resources --> Repositories* and click on `+ Add a Reposotiry`\n",
         "2. Search for your repository name on the right hand side search box, and drag it to the left hand side table. Click `Save`\n",
         "3. Search for your repository in the repositories list, and click on the ... menu. Click \"Index Now\" . No need to change anything in the dialog that opens. Refresh the status to see the results.\n",
         "\n",
