--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -123,7 +123,7 @@
         "\n",
         "1. In Artifactory,go to our pypi repository: https://jftrain17224572670.jfrog.io/ui/repos/tree/General/mlops-training-remote-pypi \n",
         "2. Click on `Set Me Up` in the top bar, and click on `Install` tab.\n",
-        "3. Copy the URL from the value of index-url (should look something like https://pstrainenv:<PASSWORD>@jftrain17224572670.jfrog.io/artifactory/api/pypi/mlops-training-remote-pypi/simple)\n",
+        "3. Copy the URL from the value of index-url (should look something like https://youruser:<PASSWORD>@jftrain17224572670.jfrog.io/artifactory/api/pypi/mlops-training-remote-pypi/simple)\n",
         "4. Replace \\<ARTIFACTORY_PIP_REPOSITORY_URL> with the URL you copied .\n",
         "\n",
         "\n",
@@ -192,14 +192,7 @@
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
-        "Replace \\<YOUR_NAME> with your name. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "<YOUR_NAME> with your name. "
+        "Replace \\<YOUR_NAME> with your name. Don't forget to surround it by quote e.g. \"Tom\"."
       ]
     },
     {
@@ -832,7 +825,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.4"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
