--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -162,7 +162,7 @@
       },
       "outputs": [],
       "source": [
-        "from huggingface_hub import snapshot_download, HfApi, logging\n",
+        "from huggingface_hub import snapshot_download, HfApi\n",
         "from huggingface_hub.utils import HfHubHTTPError\n",
         "\n",
         "import json\n",
@@ -204,7 +204,8 @@
       },
       "outputs": [],
       "source": [
-        "logging.set_verbosity_error()\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')\n",
         "\n",
         "# Load the model and processor\n",
         "model_name = \"shirabendor/YOLOV8-oiv7\"\n",
@@ -321,7 +322,7 @@
       },
       "outputs": [],
       "source": [
-        "logging.logging.getLogger(\"ultralytics\").setLevel(logging.ERROR) \n",
+        "logging.getLogger(\"ultralytics\").setLevel(logging.ERROR) \n",
         "\n",
         "model = YOLO(weights)\n",
         "\n",
@@ -380,7 +381,10 @@
         "Let's go ahead and test the model! \n",
         "Please approve using the camera for the model to work.\n",
         "Once you have the video stream, click \"Capture\" to take a photo, and examine the model's output.\n",
-        "Then, run the cell again and take a photo of yourself and the Jfrog frog. Did the model identify the frog?"
+        "Then, run the cell again and take a photo of yourself and the Jfrog frog. Did the model identify the frog?\n",
+        "\n",
+        "*NOTE:*\n",
+        "The following cell may fail in the first time because it runs in parallel to requesting the access to the webcam. If it happens just rerun the cell."
       ]
     },
     {
