--- a/mlops_course.ipynb
+++ b/mlops_course.ipynb
@@ -638,10 +638,12 @@
         "\n",
         "Please perform the following steps:\n",
         "1. Navigate to *Administration --> Repositories*.\n",
-        "2. Create a **local** HuggingFaceML repository in your Artifactory project. This repository will be used to cache the models HuggingFace.\n",
-        "3. Navigate to \"Application --> Artifactory --> Artifacts\" and find your newly created local repository. Click on \"Set Me Up\" and the top bar on the right.\n",
-        "4. Copy the *token* and paste it in the cell below, replacing the <IDENTITY_TOKEN> placeholder\n",
-        "5. Copy the HF_ENDPOINT value and paste it in the cell below, replacing the <PATH> placeholder\n"
+        "2. From the projects dropdown list, select your project (\"mlops-userx\")  \n",
+        "3. Click on 'Create a Repository' and select **Local**. Select HuggingFaceML .\n",
+        "4. In the next page, only provide the Repository Key (the repo name) The repository will be prefixed with your project name (\"mlops-userx\"). Please add the repository key \"hf-local\" then click Create Local Repository\n",
+        "5. Navigate to \"Application --> Artifactory --> Artifacts\" and find your newly created local repository. Click on \"Set Me Up\" and the top bar on the right.\n",
+        "6. Copy the *token* and paste it in the cell below, replacing the \\<IDENTITY_TOKEN> placeholder\n",
+        "7. Copy the HF_ENDPOINT value and paste it in the cell below, replacing the \\<PATH> placeholder\n"
       ]
     },
     {
@@ -738,7 +740,7 @@
         "# Replace <ARTIFACTORY_PIP_REPOSITORY_URL> with the URL pointing to your pip repository found in the the JFrog Platform Set-Me-Up.\n",
         "!pip3 install qwak-sdk -i <ARTIFACTORY_PIP_REPOSITORY_URL>\n",
         "# Replace <QWAK_PERSONAL_API_KEY> with your Qwak personal key from the qwak platform.\n",
-        "!qwak configure --api-key <QWAK_PERSONAL_API_KEY>\n",
+        "!qwak configure --api-key \"<QWAK_PERSONAL_API_KEY>\"\n",
         "\n",
         "# Test successful connection\n",
         "!qwak projects list"
@@ -754,11 +756,8 @@
         "\n",
         "✨ <span style='color : #fae253' > TASK </span> ✨\n",
         "\n",
-        "In order to build and deploy the model through the Qwak platform, we'll need to first find the model-id.\n",
-        "1. In the [Quak Platform](https://app.qwak.ai/) Navigate to *Models*.\n",
-        "2. Select your project and click on your model.\n",
-        "3. Copy your model-id from the information bar under the title with the model name (you'll have a clickable copy icon once you hover on it)\n",
-        "4. Replace the <MODEL_ID> placeholder below with your model_id.\n"
+        "In order to build and deploy the model through the Qwak platform, run the following commands.\n",
+        "1. In the cell below, replace \\<userx> with your user id."
       ]
     },
     {
@@ -769,7 +768,8 @@
       },
       "outputs": [],
       "source": [
-        "!qwak models build --model-id yolo_test_1 ./model"
+        "!qwak models create \"Frog_Factor_Authenticator\" --project \"<userx>\"         \n",
+        "!qwak models build --model-id Frog_Factor_Authenticator ./model --base-image 'public.ecr.aws/w8k8y6b6/qwak-base:0.0.14-gpu-opencv'"
       ]
     },
     {
@@ -778,7 +778,89 @@
         "id": "sSB5ey-WBKoc"
       },
       "source": [
-        "### Check your model build status (can take up to 10 minutes)"
+        "### Check your model build status (can take up to 30 minutes)\n",
+        "\n",
+        "✨ <span style='color : #fae253' > TASK </span> ✨\n",
+        "\n",
+        "1. In the [Quak Platform](https://app.qwak.ai/) Navigate to *Models*.\n",
+        "2. Select your project and click on your model.\n",
+        "3. Under the *Builds* tab, identify your build and check the status."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## While we're waiting...\n",
+        "\n",
+        "We've already deployed the model in order to be able to test it without waiting for the build to complete. Let's check our deployment and see if we're able to authenticate with the Frog-Factor Authenticator.\n",
+        "\n",
+        "👀  We'll be testing with the lagest image which you captured. It is saved in the local session as \"photo.jpg\". You can always go back to the last inference cell and rerun it to take another photo. Do not forget the frog!"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from qwak_inference import RealTimeClient\n",
+        "from PIL import Image\n",
+        "import numpy as np \n",
+        "import json\n",
+        "import cv2\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "\n",
+        "config_file = \"./model/main/config.json\"\n",
+        "\n",
+        "with open(config_file, 'r') as f:\n",
+        "    config = json.load(f)\n",
+        "\n",
+        "classes        = config['classes']\n",
+        "target_classes = config['target_classes']\n",
+        "conf           = config['conf']\n",
+        "max_det        = config['max_det']\n",
+        "\n",
+        "img = Image.open('photo.jpg')\n",
+        "image_rgb = img.convert('RGB')\n",
+        "img_ndarray = np.array(image_rgb)\n",
+        "img_list = img_ndarray.tolist()\n",
+        "img_json = json.dumps(img_list)\n",
+        "\n",
+        "frame = cv2.imread('photo.jpg')\n",
+        "\n",
+        "client = RealTimeClient(model_id=\"yolo_test_1\")\n",
+        "\n",
+        "results = client.predict(img_list)\n",
+        "\n",
+        "for result in results:\n",
+        "    label = result[\"name\"]\n",
+        "    box = result[\"box\"]\n",
+        "    x1, y1, x2, y2 = map(int, box.values())  # Convert to integer coordinates\n",
+        "\n",
+        "    if int(result[\"class\"]) in target_classes:\n",
+        "      # Draw bounding box around detected object\n",
+        "      cv2.rectangle(frame, (x1, y1), (x2, y2), (0, 0, 255), 3)  # Colored box \n",
+        "      cv2.putText(frame, \"Frog\", (x1, y1 - 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0,0,255), 2)\n",
+        "    else:\n",
+        "      cv2.rectangle(frame, (x1, y1), (x2, y2), (208, 118, 4), 3)  # Colored box \n",
+        "      cv2.putText(frame, label, (x1, y1 - 20), cv2.FONT_HERSHEY_SIMPLEX, 0.5,  (208, 118, 4), 2)\n",
+        "\n",
+        "cv2_imshow(frame)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Let's monitor the model performane\n",
+        "\n",
+        "✨ <span style='color : #fae253' > TASK </span> ✨\n",
+        "\n",
+        "1. In the [Quak Platform](https://app.qwak.ai/) Navigate to *Models*.\n",
+        "2. Select your project and click on your model.\n",
+        "3. Monitor the status under the \"overview\" tab."
       ]
     },
     {
@@ -796,17 +878,6 @@
         "3. Under the *Builds* tab, identify your build and click `Deploy`\n",
         "4. Select `Realtime`\n",
         "5. On the next screen, no need to change anything, click on `Deploy Model`\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "qu-Yr9yXBKoc"
-      },
-      "outputs": [],
-      "source": [
-        "models.shira-jfrog1.qwak.ai/v1/yolo_test_1/default/predict()"
       ]
     }
   ],
